deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dubtracker
  labels:
    pod-security.kubernetes.io/enforce: restricted
